@@ -269,7 +269,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13-beta-2</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -321,19 +321,20 @@
     <poi.version>4.0.1</poi.version>
     <commons.compress.version>1.18</commons.compress.version>
     <commons.io.version>2.6</commons.io.version>
-    <commons.lang3.version>3.8.1</commons.lang3.version>
+    <commons.lang3.version>3.9</commons.lang3.version>
     <gson.version>2.8.5</gson.version>
+    <guava.version>27.1-jre</guava.version>
     <osgi.core.version>6.0.0</osgi.core.version>
 
-    <cxf.version>3.3.0</cxf.version>
+    <cxf.version>3.3.1</cxf.version>
     <slf4j.version>1.7.25</slf4j.version>
     <jackson.version>2.9.8</jackson.version>
     <!-- when this is next upgraded, see if we can get rid of
          javax.activation dependency in tika-server -->
     <jaxb.version>2.3.2</jaxb.version>
     <cli.version>1.4</cli.version>
-    <lucene.version>7.7.0</lucene.version>
-    <mockito.version>2.23.4</mockito.version>
+    <lucene.version>8.0.0</lucene.version>
+    <mockito.version>2.27.0</mockito.version>
   </properties>
 
   <build>
